# ceph

./: .gitignore  Makefile  changelog.Debian
ceph/: .githubmap  CMakeLists.txt  PendingReleaseNotes  ceph.spec  ceph.spec.in  changelog.upstream
ceph/alpine/: APKBUILD
ceph/debian/debian/: changelog
ceph/monitoring/ceph-mixin/dashboards_out/: cephfsdashboard.json
ceph/qa/standalone/mon-stretch/: mon-stretch-fail-recovery.sh
ceph/qa/tasks/: ceph_manager.py  cephadm.py  nvmeof.py
ceph/qa/workunits/cephadm/: test_cephadm.sh
ceph/qa/workunits/rbd/: cli_migration.sh  rbd_mirror.sh  rbd_mirror_helpers.sh  rbd_mirror_journal.sh
ceph/qa/workunits/rgw/: test_rgw_d4n.py  test_rgw_datacache.py
ceph/src/: .git_version
ceph/src/civetweb/include/: civetweb.h
ceph/src/civetweb/src/: civetweb.c
ceph/src/civetweb/test/: CMakeLists.txt
ceph/src/common/options/: mgr.yaml.in  mon.yaml.in
ceph/src/cpp_redis/: CMakeLists.txt
ceph/src/cpp_redis/sources/core/: client.cpp
ceph/src/cpp_redis/tacopie/: CMakeLists.txt
ceph/src/include/rbd/: librbd.h
ceph/src/jaegertracing/jaeger-client-cpp/: CMakeLists.txt
ceph/src/jaegertracing/jaeger-client-cpp/cmake/: FindOpenTracing.cmake  Findnlohmann_json.cmake
ceph/src/libkmip/: CMakeLists.txt  Makefile  demo_create.c  demo_destroy.c  demo_get.c  kmip.c  kmip.h  kmip_bio.c  kmip_bio.h  tests.c
ceph/src/mds/: CDir.cc  Server.cc
ceph/src/mgr/: DaemonServer.cc  DaemonServer.h
ceph/src/mon/: MonMap.cc  OSDMonitor.cc
ceph/src/nvmeof/gateway/: .env  .gitmodules  Dockerfile  Dockerfile.ceph  Dockerfile.spdk  Makefile  README.md  ceph-nvmeof.conf  docker-compose.yaml  pyproject.toml  tox.ini
ceph/src/nvmeof/gateway/control/: cephutils.py  cli.py  cluster.py  config.py  discovery.py  grpc.py  kmip_client.py  prometheus.py  rebalance.py  server.py  state.py  utils.py
ceph/src/nvmeof/gateway/mk/: containerized.mk  demo.mk  demosecuredhchap.mk  demosecuredhchap_ctrlr.mk  demosecurepsk.mk
ceph/src/nvmeof/gateway/tests/: ceph-nvmeof.cluster_pool.conf  ceph-nvmeof.crc32c.conf  conftest.py  (+38 more)
ceph/src/osd/: ECCommon.cc  OSDMap.cc  PeeringState.cc  PeeringState.h
ceph/src/rgw/: rgw_asio_frontend.cc  rgw_op.cc
ceph/src/rocksdb/: CMakeLists.txt
ceph/src/rocksdb/db/: compaction_picker.cc  version_edit.cc
ceph/src/rocksdb/util/: crc32c.cc
ceph/src/rocksdb/utilities/: env_librados.cc
ceph/src/s3select/: .gitmodules  CMakeLists.txt  Dockerfile  README.md  parquet_mix_types.parquet  s3select.rst
ceph/src/s3select/.github/workflows/: clang-tidy.yml  cmake.yml
ceph/src/s3select/TPCDS/: generate_upload_and_remove_infra.bash  run_tpcds.bash  tpcds_functions.bash
ceph/src/s3select/TPCDS/ddl/: create_tpcds_tables.sql
ceph/src/s3select/TPCDS/sample-queries-tpcds/: query12.sql  query16.sql  query20.sql  query21.sql  query32.sql  query37.sql  query40.sql  query5.sql  query58.sql  query72.sql  query77.sql  query80.sql  query82.sql  query83.sql  query92.sql  query94.sql  query95.sql  query98.sql  query99.sql
ceph/src/s3select/container/trino/: hms_trino.yaml  run_trino_on_ceph.bash
ceph/src/s3select/container/trino/trino/catalog/: hive.properties
ceph/src/s3select/example/: CMakeLists.txt  csv_to_parquet.cpp  expr_genrator.py  generate_rand_csv.c  parse_csv.py  run_test.bash  s3select_example.cpp
ceph/src/s3select/include/: s3select.h  s3select_csv_parser.h  s3select_functions.h  s3select_json_parser.h  s3select_oper.h  s3select_parquet_intrf.h
ceph/src/s3select/test/: CMakeLists.txt  s3select_perf_test.cpp  s3select_test.cpp  s3select_test.h  s3select_test_json_parser.cpp
ceph/src/seastar/: CMakeLists.txt
ceph/src/spawn/: CMakeLists.txt
ceph/src/spawn/test/: CMakeLists.txt  test_async_result.cc  test_exception.cc  test_spawn.cc
ceph/src/spdk/examples/: Makefile
ceph/src/spdk/intel-ipsec-mb/: Makefile  alloc.c  zuc_iv.c
ceph/src/spdk/lib/: Makefile
ceph/src/spdk/mk/: spdk.common.mk
patches/: 0001-cmake-disable-version-from-git.patch  0001-update-changelog.patch  0002-build-with-system-boost.patch  0002-ceph-detect-init-support-Debian-Stretch.patch  0002-cmake-disable-version-from-git.patch  0002-d-rules-fix-instaldoc-override-and-ship-upstream-cha.patch  0002-debian-control-add-break-libpvestorage-perl.patch  0002-enable-systemd-targets-by-default.patch  0003-ceph-detect-init-support-Debian-Stretch.patch  0003-ceph-mgr-only-suggest-mgr-plugins.patch  0003-d-rules-fix-instaldoc-override-and-ship-upstream-cha.patch  0003-debian-control-add-break-libpvestorage-perl.patch  0003-enable-LZ4-support.patch  0003-enable-systemd-targets-by-default.patch  0004-Remove-failing-actions-from-prerm.patch  0004-d-rules-fix-instaldoc-override-and-ship-upstream-cha.patch  0004-debian-workaround-the-bug-in-dpkg-maintscript-helper.patch  0004-enable-LZ4-support.patch  0004-enable-systemd-targets-by-default.patch  0004-fix-service-ordering-avoid-Before-remote-fs-pre.targ.patch  0004-msg-async-rdma-uninitialized-variable-fix.patch  0004-remove-legacy-pve-ceph-osd-activation-script-in-post.patch  0005-Revert-debian-control-adjust-ceph-osdomap-kvstore-mo.patch  0005-Revert-debian-drop-boost-build-dependencies.patch  0005-ceph-disk-fix-runtime-omission-for-ceph-osd-service.patch  0005-ceph-mgr-fix-package-description.patch  0005-fix-4759-run-ceph-crash-daemon-with-www-data-group-f.patch  0005-msg-async-rdma-uninitialized-variable-fix.patch  0005-remove-legacy-init.d-ceph-script.patch  0005-remove-legacy-pve-ceph-osd-activation-script-in-post.patch  0005-use-sockaddr_storage-for-IPv6-compat.patch  0006-Revert-ceph-disk-add-deprecation-warnings-in-favor-o.patch  0006-Revert-debian-control-adjust-ceph-osdomap-kvstore-mo.patch  0006-Revert-debian-drop-boost-build-dependencies.patch  0006-ceph-mgr-don-t-load-broken-rest-module-by-default.patch  0006-ceph-mgr-only-suggest-mgr-plugins.patch  0006-debian-control-add-break-libpvestorage-perl.patch  0006-fix-4759-run-ceph-crash-daemon-with-www-data-group-f.patch  0006-fix-compatibility-with-CPUs-not-supporting-SSE-4.1-i.patch  0006-mon-MgrMonitor-read-cmd-descs-if-empty-on-update_fro.patch  (+191 more)
(+171 files in other folders)
